; ModuleID = '/home/carl/AnghaBench/linux/arch/m68k/coldfire/extr_intc-2.c_intc_irq_ack.c'
source_filename = "/home/carl/AnghaBench/linux/arch/m68k/coldfire/extr_intc-2.c_intc_irq_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }

@EINT0 = common dso_local global i32 0, align 4
@MCFEPORT_EPFR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @intc_irq_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intc_irq_ack(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca i32, align 4
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %4 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %5 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @EINT0, align 4
  %9 = sub i32 %7, %8
  %10 = shl i32 1, %9
  %11 = load i32, i32* @MCFEPORT_EPFR, align 4
  %12 = call i32 @__raw_writeb(i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @__raw_writeb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
